:sparkles: 인증 로직 수정
